--- a/0406a.css
+++ b/0406a.css
@@ -1,25 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap');
+
 body, p { margin: 0; }
 #box1 {
     position: relative;
     width: 800px;
-    left: 60px;
+    left: 0px;
     top: 0;
-    background-color: #00ff00;
+    background-color: #92a2ff;
 }
 #box1 > img {
     width: 40%;
 }
 #box2 { 
-   
-    position: absolute;
+    position: static;
     width: 800px;
-    height: 200px;
+    height: 400px;
     left: 400px;
     top: 400px;
     
-    background-image: url("cat.png");
-    background-size: cover; /* contain:이미지 전체가 보이도록, cover: 이미지가 박스에 가득 차게 */
+    background-image: url(bear1.jpeg);
+    background-size: cover; 
     background-position-y: center;
     background-color: #0051ff;
-    font-size: 0; /* inline 속성의 자식요소 간 공백 제거 */
+    font-size: 0; 
+}
+    #box3 {
+        position: relative;
+        width: 100vw;
+        height: 56.25vw;
+        left: 0;
+        top: 0;
+        background-color: #000000;
+    }
+    #box3 > video {
+        width: 100%;
+        height: 100%;
+    }
+    #box3 > p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: 'Oswald', sans-serif;
+        font-size: 5vw;
+        color: rgba(255, 255, 255, 0.0);
+        -webkit-text-stroke: 1px #ffffff;
+    }
+    
+    #box4 {
+            position: relative;
+            width: 100vw;
+            height: 56.25vw;
+            left: 0;
+            top: 0;
+            background-color: #000000;
+        }
+    #box4 > iframe {
+            width: 100%;
+            height: 100%;
+        }
+    #box4 > p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: 'Rubik Wet Paint', cursive;
+        font-size: 10vw;
+        color: rgba(255, 0, 0, 0.6);
+
 }
